# minecraftcpp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PERFORMANCE_FIXES.md  PROFILING_START_HERE.md  PROJECT_COVERAGE.md  README.md  TASKLIST.md  libxfixes-dev_1%3a6.0.0-2+b4_amd64.deb  run_profile.bat
mcpp/: CMakeLists.txt  README.md
mcpp/cmake/: CompilerFlags.cmake  PrepareRuntimeAssets.cmake  VerifyAssetPack.cmake
mcpp/docs/: DECORATION_PLAN.md  PORT_COVERAGE.md  PORT_COVERAGE.tsv  TERRAIN_GEN_PERFORMANCE.md  WORLDGEN_1TO1_FOUNDATION.md  WORLDGEN_PLAN.md
mcpp/src/: CMakeLists.txt  debug_main.cpp  main.cpp
mcpp/src/assets/: AssetManager.cpp  AssetManager.h  AssetPack.h  TextureAtlas.cpp  TextureAtlas.h  assets.rc  block_atlas.json  block_states.json  items.json  network_registries.tsv  resource_ids.h
mcpp/src/audio/: OggDecoder.h  SoundEngine.cpp  SoundEngine.h  SoundEvent.h  SoundManager.cpp  SoundSource.h
mcpp/src/client/: CameraNearPlaneMathParityTest.cpp  CameraRotationMath.h  GuiScaleParityTest.cpp  KeyMapping.cpp  KeyMapping.h  Minecraft.cpp  Minecraft.h  MinecraftFastStart.cpp
mcpp/src/client/animation/: AnimationChannelInterpolationsParityTest.cpp
mcpp/src/client/color/: ColorLerper.h  ColorLerperParityTest.cpp
mcpp/src/client/gui/: EditBox.h  EditBoxParityTest.cpp  GridLayout.h  GridLayoutParityTest.cpp  HeaderFooterLayoutParityTest.cpp  ScreenRectangle.h  ScreenRectangleParityTest.cpp  SelectionListParityTest.cpp  SliderButtonParityTest.cpp
mcpp/src/client/particle/: DragonBreathParticle.h  FlyTowardsPositionParticle.h  LifetimeAlphaParityTest.cpp  ParticlePhysics.h
mcpp/src/client/player/: LocalPlayer.cpp  LocalPlayer.h
mcpp/src/client/renderer/: EndFlashState.h  ItemInHandTransformParityTest.cpp  WeatherEffectMath.h  WeatherEffectParityTest.cpp
mcpp/src/core/: BlockBox.h  BlockMathParityTest.cpp  Cursor3D.h  Direction2D.h  Direction8.h  Direction8ParityTest.cpp  DirectionAxisExtra.h  DirectionPlaneParityTest.cpp  FrontAndTopParityTest.cpp  GlobalPos.h  Log.h  PosCodec.h  QuartPos.h  QuartPosParityTest.cpp  ResourceLocation.h  RotationsParityTest.cpp  SectionPosOffset.h  Sha256.h  ThreadPool.cpp  ThreadPool.h  UUIDUtil.h  Vec3i.h  Vec3iParityTest.cpp
mcpp/src/gui/: Gui.cpp  Gui.h
mcpp/src/gui/components/: Button.cpp  Button.h  OptionWidgets.cpp  OptionWidgets.h
mcpp/src/gui/screens/: PauseScreen.h  Screen.h  TitleScreen.cpp  TitleScreen.h
mcpp/src/nbt/: NbtIo.cpp  NbtIo.h  NbtParityTest.cpp  Tag.cpp  Tag.h
mcpp/src/network/: ComponentNbtParityTest.cpp  Connection.cpp  DataComponentPatchMiscParityTest.cpp  DataComponentPatchParityTest.cpp  ItemStackStreamParityTest.cpp  LpVec3.h  LpVec3ParityTest.cpp  NetworkRegistries.h  NetworkRegistriesParityTest.cpp  PacketBuffer.cpp  PacketBuffer.h  PacketBufferParityTest.cpp
mcpp/src/network/chat/: ClickEventAction.h  ClickEventActionParityTest.cpp  Style.h  StyleParityTest.cpp
mcpp/src/platform/: Window.cpp  Window.h
mcpp/src/render/: CloudCellMathParityTest.cpp  IRenderDevice.h  LightTextureMath.h  LightTextureParityTest.cpp  Lighting.h  LightingParityTest.cpp  Octree.h  OctreeParityTest.cpp  OverlayTextureParityTest.cpp  PoseStack.h  PoseStackParityTest.cpp  RenderBackend.cpp  RenderBackend.h  StarGeometry.h  StarGeometryParityTest.cpp  Std140SizeCalculator.h  Std140SizeCalculatorParityTest.cpp  WindowGuiScale.h
mcpp/src/render/block/: BlockModelLighterAO.h  BlockModelLighterAOParityTest.cpp  BlockModelLighterFlatParityTest.cpp  BlockModelLighterShape.h  BlockModelLighterTables.h
mcpp/src/render/dx12/: BufferDX12.cpp  BufferDX12.h  CommandListDX12.cpp  CommandListDX12.h  DeviceDX12.cpp  PipelineDX12.cpp  SwapchainDX12.h  TextureDX12.h  (+1 more)
mcpp/src/resources/: Identifier.h  IdentifierChars.h  IdentifierParityTest.cpp  ResourceLocationCharsParityTest.cpp
mcpp/src/sounds/: SoundSource.h  SoundSourceParityTest.cpp
mcpp/src/stats/: StatFormatterParityTest.cpp
mcpp/src/util/: ARGB.h  ARGBParityTest.cpp  ARGBTables.inc  AvatarParityTest.cpp  BinaryAnimator.h  BinaryAnimatorParityTest.cpp  BlockUtil.h  Brightness.h  BrightnessParityTest.cpp  ByIdMap.h  ColorRgbaParityTest.cpp  CommonColors.h  Crypt.h  CryptDigestParityTest.cpp  CsvOutput.h  DependencySorter.h  DependencySorterParityTest.cpp  EasingParityTest.cpp  FileUtilParityTest.cpp  Graph.h  GraphSortParityTest.cpp  IdBiMapParityTest.cpp  InclusiveRange.h  InclusiveRangeParityTest.cpp  KeyframeInterpolation.h  KeyframeParityTest.cpp  LightCoordsUtilParityTest.cpp  LinearCongruentialGenerator.h  SegAngleParityTest.cpp  SequencedPriorityIteratorParityTest.cpp  SimpleBitStorage.h  SimpleBitStorageMagic.inc  SmoothDouble.h  StringDecomposerParityTest.cpp  StringUtilExtra.h  StringUtilParityTest.cpp  StringUtilWhitespace.inc  TriState.h  WeightedRandom.h  WeightedRandomParityTest.cpp
mcpp/src/world/: Difficulty.h  DifficultyInstanceParityTest.cpp  DifficultyParityTest.cpp
mcpp/tools/: AabbParity.java  AbstractHorseParity.java  AgeableMobParity.java  AnimationChannelInterpolationsParity.java  AnimationStateParity.java  AttributeModifierOpParity.java  AvatarParity.java  AxisAlignedLinearPosTestPredicateParity.java  AxolotlVariantParity.java  BiasedToBottomIntParity.java  BinaryAnimatorParity.java  BiomeDecorationParity.java  BiomeManagerExpected.java  BiomeSurfaceParity.java  BiomeTemperatureParity.java  BlendedNoiseParity.java  BlockBoxParity.java  BlockCollisionShapeParity.java  BlockMathParity.java  BlockModelLighterAOParity.java  BlockModelLighterFlatParity.java  BlockModelLighterShapeParity.java  BlockRotationParity.java  BlockStateEnums2Parity.java  BlockStateEnumsParity.java  BlockStateProviderParity.java  BlockUpdateShapeParity.java  BooleanOpParity.java  BowItemPowerParity.java  ByIdMapParity.java  CameraNearPlaneMathParity.java  ChatVisibilityParity.java  ClampedIntParity.java  ClampedNormalFloatParity.java  ClickEventActionParity.java  ClipContextEnumsParity.java  ColorRgbaParity.java  ColumnParity.java  CommonColorsParity.java  ComponentNbtParity.java  (+280 more)
mcpp/tools/asset_packer/: CMakeLists.txt  main.cpp
(+8989 files in other folders)
